// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lit property template value 1`] = `
{
  "attributes": {
    "names": [],
    "values": [],
  },
  "classes": [
    "placeholder4097889236a2af26c293033feb964c4cf118c0224e0d063fec0a89e9d0569ef2",
  ],
  "ids": [],
  "tags": [
    "head",
    "div",
    "body",
    "html",
  ],
  "undetermined": [],
}
`;

exports[`multiple HTML elements 1`] = `
{
  "attributes": {
    "names": [
      "placeholder4097889236a2af26c293033feb964c4cf118c0224e0d063fec0a89e9d0569ef2",
    ],
    "values": [
      "thonk",
    ],
  },
  "classes": [
    "main",
    "thonk",
  ],
  "ids": [
    "thonk",
  ],
  "tags": [
    "head",
    "button",
    "custom-component",
    "div",
    "body",
    "html",
  ],
  "undetermined": [],
}
`;

exports[`template with attribute 1`] = `
{
  "attributes": {
    "names": [
      "disabled",
      "data-tooltip",
    ],
    "values": [
      "",
      "placeholder4097889236a2af26c293033feb964c4cf118c0224e0d063fec0a89e9d0569ef2",
    ],
  },
  "classes": [
    "blah",
  ],
  "ids": [],
  "tags": [
    "head",
    "div",
    "body",
    "html",
  ],
  "undetermined": [],
}
`;
